--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html>
-  hello world
+  <head>
+    <title> Art ish website? </title> 
+  </head>
+  <body>
+    <h1> ART </h1>
+    <h2> About Me </h2>
+    <p>I am a 14 years old and am in my freshman year of High school.<br>
+      I enjoy drawing and diffrent forms of art.<br>
+      I am trying to create a webpage.<br> </p>
+  </body>
 </html>
