--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <table>
+  <thead>
     <title> Art ish website? </title> 
-  </head>
-  <body>
-    <h1> ART </h1>
-    <h2> About Me </h2>
+  </thead>
+  <tbody>
+    <th1> ART </th1>
+    <th2> About Me </th2>
     <p>I am a 14 years old and am in my freshman year of High school.<br>
       I enjoy drawing and diffrent forms of art.<br>
-      I am trying to create a webpage.<br> </p>
-  </body>
+      I am trying to create a webpage to help and inform people about what I have learnd.<br>
+      I am a very Sciency person. </p>
+    
+  </tbody>
+  </table> 
 </html>
