--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title> Art ish website? </title>
+  </head>
+  
+  <body>
+  
   <table>
-  <thead>
-    <title> Art ish website? </title> 
-  </thead>
+
   <tbody>
     <th1> ART </th1>
     <th2> About Me </th2>
@@ -13,5 +17,7 @@
       I am a very Sciency person. </p>
     
   </tbody>
+    <img>  </img>
   </table> 
+  </body>
 </html>
