--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   </head>
   
   <body>
-  
-  <table>
+    <h1> HELLO WORLD </h1>
+    <table>
 
-  <tbody>
-    <th1> ART </th1>
-    <th2> About Me </th2>
-    <p>I am a 14 years old and am in my freshman year of High school.<br>
+    <tbody>
+     <th1> ART </th1>
+     <th2> About Me </th2>
+      <p>I am a 14 years old and am in my freshman year of High school.<br>
       I enjoy drawing and diffrent forms of art.<br>
       I am trying to create a webpage to help and inform people about what I have learnd.<br>
       I am a very Sciency person. </p>
     
-  </tbody>
+    </tbody>
     <img>  </img>
-  </table> 
+    </table> 
   </body>
 </html>
