--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
   
   <body>
-    <h1> HELLO WORLD </h1>
+    <h1> ART!! </h1>
     <table>
 
     <tbody>
-     <th1> ART </th1>
-     <th2> About Me </th2>
+     <h1> Drawing </h1>
+     <h2> About Me </h2>
       <p>I am a 14 years old and am in my freshman year of High school.<br>
       I enjoy drawing and diffrent forms of art.<br>
       I am trying to create a webpage to help and inform people about what I have learnd.<br>
