--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       I am a very Sciency person. </p>
     
     </tbody>
-    <img>  </img>
+    <img src="https://www.kasandbox.org/programming-images/animals/rabbit.png" alt="Rabbit with lop ears in barn" width="203"> 
     </table> 
   </body>
 </html>
