--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <p>I am a 14 years old and am in my freshman year of High school.<br>
       I enjoy drawing and diffrent forms of art.<br>
       I am trying to create a webpage to help and inform people about what I have learnd.<br>
-      I am a very Sciency person. </p>
+      I am a very Sciency person.<br>
+      I am a bright optomistic person who enjoys spending time with my friends and family.</p>
     
     </tbody>
     <img src="https://drive.google.com/file/d/0B2hb7pe0Co_7RVF3U2VRdWNXX2c/view" width="203"> 
