--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body style = "margin: 100px;">
     
-    <h1> About me/my artstyle </h1>
+    <h1 style = "text-align: center;"> About me/my artstyle </h1>
     
     <table>
 
