--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
      <h2 style = "text-align: center;"> About Me </h2>
       
-      <p style = "text-align: center;"> Hi! my name is Jessandra<br> 
+      <p style = "text-align: center; color: #00e6e6;" > Hi! my name is Jessandra<br> 
       I am a 14 years old female and am in my freshman year of High school.<br>
       I enjoy drawing and diffrent forms of art.<br>
       I am trying to create a webpage to help and inform people about what I have learnd.<br>
