--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </p> 
       <h2 style = "text-align: center; color: #00cca3;"> Girls who code quotes</h2>
       <ul style = "text-align: center; color: #0099ff;" ><li>"I think I'm just lossing my mind"</li>
-        <li>"je parle le francaise"</li></ul>
+        <li>"je parle francaise"</li></ul>
     </table> 
   </body>
 </html>
