--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
       
       </p> 
       <h2 style = "text-align: center; color: #00cca3;"> Girls who code quotes</h2>
-      <ul style = "text-align: center; color: #0099ff;" ><li>"I think I'm just lossing my mind"</li>
-        <li>"je parle francaise"</li></ul>
-    </table> 
+      <ul style = "text-align: center; color: #0099ff;" ><li style = "text-align: center;" >"I think I'm just lossing my mind"</li>
+        <li style = "text-align: center;" >"je parle francaise"</li>
+        <li style = "text-align: center;"> oof </li>
+        <li style = "text-align: center;"> unknown </li></ul>
+    </table>  
   </body>
 </html>
