--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
         
       <p style = "text-align: center; color: #0099ff;">I have two cats<br>
       I rather enjoy their company and my familys<br>
-      I am very busy and so I can't always ddraw or enjoy what I'm doing ecause I'm so tired, not that I'm compliaing<br> 
+      I am very busy and so I can't always draw or enjoy what I'm doing ecause I'm so tired, not that I'm compliaing<br> 
       
       </p> 
       <h2 style = "text-align: center; color: #00cca3;"> Girls who code quotes</h2>
-      <ul style = "text-align: center; color: #0099ff;" ><li style = "text-align: center;" >"I think I'm just lossing my mind"</li>
+      <ul style = "text-align: center; color: #0099ff; list-style-type: none; " >
+        <li style = "text-align: center;" >"I think I'm just lossing my mind"</li>
         <li style = "text-align: center;" >"je parle francaise"</li>
         <li style = "text-align: center;"> oof </li>
         <li style = "text-align: center;"> unknown </li></ul>
