--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <a href = "drawinng.html"> to my drawing portfolio!!!!</a>
+    <a href = "drawings.html"> to my drawing portfolio!!!!</a>
     <table>
 
     <tbody>
