--- a/drawings.html
+++ b/drawings.html
@@ -3,6 +3,7 @@
   <title> Drawing portfolio </title>
 <body>
   <h1> Drawing Portfolio<h1>
-    
+     <img style = src="ooof.png" style = "margin: auto; display:block;" width="300" length="250">
+      
   </body>
 </html>
