--- a/drawings.html
+++ b/drawings.html
@@ -4,7 +4,7 @@
 <body>
   <h1> Drawing Portfolio<h1>
     <a href = "index.html" >Home page</a>
-     <img style = src="ooof.png" style = "margin: auto; display:block;" width="300" length="250">
+     <img src="ooof.png" style = "margin: auto; display:block;" width="300" length="250">
       
   </body>
 </html>
