--- a/drawings.html
+++ b/drawings.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <title> Drawing portfolio </title>
+  <link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
 <body>
   <h1> Drawing Portfolio<h1>
     <a href = "index.html" >Home page</a>
