--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <a href = "drawings.html"> to my drawing portfolio!!!!</a>
+    <h2><a href = "drawings.html"> to my drawing portfolio!!!!</a></h2>
     <table>
 
     <tbody>
