--- a/drawings.html
+++ b/drawings.html
@@ -6,7 +6,7 @@
    href = "style.css" />
 <body>
   <h1> Drawing Portfolio</h1>
-    <h2><a href = "index.html" >Home page</a><h2/>
+    <h2><a href = "index.html" >Home page</a></h2>
      <img src="ooof.png" style = "margin: auto; display:block;" width="300" length="250">
       <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg" style = "margin: auto; display:block;" width="300" length="250">
     <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg " style = "margin: auto; display:block;" width="300" length="250">
