--- a/drawings.html
+++ b/drawings.html
@@ -7,9 +7,9 @@
 <body>
   <h1> Drawing Portfolio</h1>
     <h2><a href = "index.html" >Home page</a></h2>
-     <img src="FullSizeRender.jpg" style = "margin: auto; display:block;" width="300" length="250">
-   <img src=" <img src="ooof.png" style = "margin: auto; display:block;" width="300" length="250">" style = "margin: auto; display:block;" width="300" length="250">
-      <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg" style = "margin: auto; display:block;" width="300" length="250">
-    <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg " style = "margin: auto; display:block;" width="300" length="250">
+     <img src="FullSizeRender.jpg">
+   <img src=" <img src="ooof.png">
+      <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg">
+    <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg ">
     </body>
 </html>
