--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
     <h2><a href = "drawings.html"> to my drawing portfolio!!!!</a></h2>
+    <h2><a href = "digital.html" >digital photagraphy gallary</a></h2>
     <table>
 
     <tbody>
