--- a/drawings.html
+++ b/drawings.html
@@ -7,7 +7,7 @@
 <body>
   <h1> Drawing Portfolio</h1>
     <h2><a href = "index.html" >Home page</a></h2>
-  <h2><a href = "digital.html" >Home page</a></h2>
+  <h2><a href = "digital.html" >digital photography gallary</a></h2>
      <img src="FullSizeRender.jpg">
    <img src=" <img src="ooof.png">
       <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg">
