--- a/digital.html
+++ b/digital.html
@@ -13,7 +13,7 @@
  <h1> Digital photograph gallary</h1>
   
   <h2><a href = "index.html" >Home page</a></h2>
-   <h2><a href = "drawings.html" >digital photography gallary</a></h2>
+   <h2><a href = "drawings.html" >drawing portfolio</a></h2>
   
    <img src="FullSizeRender.jpg">
    <img src=" <img src="ooof.png">
