--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <h3><a href = "drawings.html"> to my drawing portfolio!!!!</a></h3> <h23a href = "digital.html" >digital photagraphy gallary</a></h3>
+    <h3><a href = "drawings.html"> to my drawing portfolio!!!!</a></h3> <h3><a href = "digital.html" >digital photagraphy gallary</a></h3>
     <table>
 
     <tbody>
