--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <p> <h3> <a href = "drawings.html"> to my drawing portfolio!!!!</a> </h3> <h3> <a href = "digital.html" >digital photagraphy gallary</a> </h3> </p>
+    <p> <h3> <a href = "drawings.html"> drawing portfolio! </a> </h3> 
+    <h3> <a href = "digital.html" > digital photagraphy gallary! </a> </h3> </p>
+  
     <table>
 
     <tbody>
