--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <p> <h3> <a href = "drawings.html"> drawing portfolio! </a> </h3> 
-    <h3> <a href = "digital.html" > digital photagraphy gallary! </a> </h3> </p>
+    <h3> <a href = "drawings.html"> drawing portfolio! </a> <a href = "digital.html" > digital photagraphy gallary! </a> </h3> 
   
     <table>
 
