--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <h3> <a href = "drawings.html"> drawing portfolio! </a> <a href = "digital.html" > digital photagraphy gallary! </a> </h3> 
+    <h3> <a href = "drawings.html"> drawing portfolio! </a> 
+      <a href = "digital.html" > digital photagraphy gallary! </a> </h3> 
   
     <table>
 
