--- a/drawings.html
+++ b/drawings.html
@@ -9,8 +9,8 @@
     <h2><a href = "index.html" >Home page</a></h2>
   <h2><a href = "digital.html" >digital photography gallary</a></h2>
      <img src="FullSizeRender.jpg">
-   <img src=" <img src="ooof.png">
-      <img src = "0FC32670-2107-4DDD-873-F00257B4C7F0.jpeg">
-    <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg ">
+   <img src=" <img src="E2F45251-1E02-447F-9A1E-1B71B1BA9B55.jpeg">
+      <img src = "0FC32670-2107-4DDD-873E-F00257B4C7F0.jpeg">
+    <img src ="608CDC52-8CFC-47F3-A672-1C96D62A2C05.jpeg">
     </body>
 </html>
