--- a/digital.html
+++ b/digital.html
@@ -12,8 +12,9 @@
  
  <h1> Digital photograph gallary</h1>
   
-  <h2><a href = "index.html" >Home page</a></h2>
-   <h2><a href = "drawings.html" >drawing portfolio</a></h2>
+  <h3><a href = "index.html" >Home page</a>
+    
+   <a href = "drawings.html" >drawing portfolio</a></h3>
   
    <img src="FullSizeRender.jpg">
    <img src=" <img src="ooof.png">
