--- a/aboutmyart.html
+++ b/aboutmyart.html
@@ -17,10 +17,7 @@
    
   <a href = "digital.html" >digital photography gallary</a></h3>
   
-   <img src="FullSizeRender.jpg">
-   <img src=" <img src="ooof.png">
-   <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg">
-    <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg ">
+  <h2> What do I Draw the Most?</h2>
  
  </body>
 </html>
