--- a/drawings.html
+++ b/drawings.html
@@ -14,7 +14,8 @@
   
     <h3><a href = "index.html" >Home page</a>
   
-  <a href = "digital.html" >digital photography gallary</a></h3>
+  <a href = "digital.html" >digital photography gallary</a>
+  <a href = "aboutmyart.html" >About My Art</a></h3>
   
    <img src=" <img src= "E2F45251-1E02-447F-9A1E-1B71B1BA9B55.jpeg" >
                                                                   
