--- a/digital.html
+++ b/digital.html
@@ -14,7 +14,9 @@
   
   <h3><a href = "index.html" >Home page</a>
     
-   <a href = "drawings.html" >drawing portfolio</a></h3>
+   <a href = "drawings.html" >drawing portfolio</a>
+    
+     <a href = "aboutmyart.html" >About My Art</a></h3>
   
    <img src="FullSizeRender.jpg">
    <img src=" <img src="ooof.png">
