--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
     <h3> <a href = "drawings.html"> drawing portfolio!      </a> 
-      <a href = "digital.html" >      digital photagraphy gallary! </a> </h3> 
+      <a href = "digital.html" >      digital photagraphy gallary! </a>
+     <a href = "aboutmyart.html" >About My Art</a> </h3> 
   
     <table>
 
