--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <title> A Website About Me </title>
+    <title> Geeky Girl can Draw </title>
      <link rel = "stylesheet"
    type = "text/css"
    href = "style.css" />
