--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     
-    <title> Geeky Girl can Draw </title>
+    <title> Geeky Girl can Draw
+     <img src = "ooof.png" >
+  >
+    </title>
      <link rel = "stylesheet"
    type = "text/css"
    href = "style.css" />
