--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
-    <title> Geeky Girl can Draw
-     <img src = "ooof.png" >
-  >
-    </title>
+    <link rel="ooof" href="ooof.png">
+    <title> Geeky Girl can Draw </title>
      <link rel = "stylesheet"
    type = "text/css"
    href = "style.css" />
