--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">
+    <link rel="shortcut icon" href="JBicon.png">
     <title> Geeky Girl can Draw </title>
      <link rel = "stylesheet"
    type = "text/css"
