--- a/drawings.html
+++ b/drawings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   
-  
+    <link rel="shortcut icon" href="JBicon.png">
   <title> Drawing portfolio </title>
   
   <link rel = "stylesheet"
