--- a/digital.html
+++ b/digital.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
 <html>
-
+  
+    <link rel="shortcut icon" href="JBicon.png">
   <title> Digital photography gallary </title>
   
   <link rel = "stylesheet"
