--- a/digital.html
+++ b/digital.html
@@ -21,8 +21,8 @@
      <a href = "aboutmyart.html" >About My Art</a></h3>
   
    <img src="FullSizeRender.jpg">
-   <img src=" <img src="ooof.png">
-   <img src = "https://www.almanac.com/sites/default/files/image_nodes/roses-2888589_1920.jpg">
+   <img src=" <img src="IMG_0027.JPG">
+   <img src = "IMG_0029.jpg">
     <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg ">
  
  </body>
