--- a/digital.html
+++ b/digital.html
@@ -21,9 +21,9 @@
      <a href = "aboutmyart.html" >About My Art</a></h3>
   
    <img src="FullSizeRender.jpg">
-   <img src=" <img src="IMG_0027.JPG">
+   <img src= "IMG_0027.JPG">
    <img src = "IMG_0029.jpg">
-    <img src ="https://www.fiftyflowers.com/site_files/FiftyFlowers/Image/Product/Hot-Lady2-350_de950408.jpg ">
+   <img src ="IMG_0027.JPG">
  
  </body>
 </html>
