--- a/digital.html
+++ b/digital.html
@@ -24,6 +24,7 @@
    <img src= "IMG_0027.JPG">
    <img src = "IMG_0029.jpg">
    <img src ="IMG_0027.JPG">
- 
+   <img src ="IMG_0042.JPG">
+  <img src="IMG_0031.JPG">
  </body>
 </html>
