--- a/drawings.html
+++ b/drawings.html
@@ -17,7 +17,7 @@
   <a href = "digital.html" >digital photography gallary</a>
   <a href = "aboutmyart.html" >About My Art</a></h3>
   
-   <img src=" <img src= "E2F45251-1E02-447F-9A1E-1B71B1BA9B55.jpeg" >
+   <img src=" <img src= "IMG_0031.JPG" >
                                                                   
       <img src = "0FC32670-2107-4DDD-873E-F00257B4C7F0.jpeg">
                                                             
