--- a/digital.html
+++ b/digital.html
@@ -26,5 +26,6 @@
    <img src ="IMG_0027.JPG">
    <img src ="IMG_0042.JPG">
   <img src="IMG_0031.JPG">
+  <img src ="IMG_0032.jpg">
  </body>
 </html>
