--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    
     
     <h1 style = "text-align: center; color: #34cbcb;"> About me/my artstyle </h1>
-    <h3> <a href = "drawings.html"> drawing portfolio!      </a> 
-      <a href = "digital.html" >      digital photagraphy gallary! </a>
-     <a href = "aboutmyart.html" >About My Art</a> </h3> 
+    <h3> <a href = "drawings.html" style = "color:#9ec3ff" > drawing portfolio!      </a> 
+      <a href = "digital.html" style = "color:#bc9eff">      digital photagraphy gallary! </a>
+     <a href = "aboutmyart.html" style = "color:#ff9ef3" >About My Art</a> </h3> 
   
     <table>
 
